Lv4, 5 예외처리 완료